Minor changes - added computations of model performance to my model

--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "98f96210-9b6b-4589-ae6a-be7b219121e9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "42cf1fcf-3422-4167-9ed1-d695d3e8c59a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "bea5e3ea-744f-4ea3-a082-27bb47cd1ac2",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "13d86438-aae7-4433-8644-e26d56daae6f",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
    "metadata": {},
    "outputs": [
@@ -134,45 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "3e891559-d14a-47a2-af18-a5363af7e60b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create the basic linear regression model here with lasso regression. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "39edb992-3082-4415-a155-dbd36c360774",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.03535259217607404\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Create a model whose features include all interaction terms\n",
-    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
-    "                   (\"linear model\", LinearRegression())\n",
-    "]) \n",
-    "#setting degree = 2 creates all pairwise interaction terms. \n",
-    "\n",
-    "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
-    "pred = pipe.predict( df_ho[features] )\n",
-    "\n",
-    "print( root_mean_squared_error( df_ho[\"y\"], pred) ) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +150,8 @@
     }
    ],
    "source": [
-    "#Create a model with all interaction terms and lasso regression \n",
+    "#Create the basic linear regression model here with lasso regression. \n",
+    "\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LassoCV, Lasso\n",
@@ -220,13 +184,59 @@
     "print(f\"\\nAlpha: {alpha}\")\n",
     "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
     "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")\n",
-    "#print(f\"Cross-validated RMSE: {cv_rmse:.6f}\")\n",
+    "#print(f\"Cross-validated RMSE: {cv_rmse:.6f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "39edb992-3082-4415-a155-dbd36c360774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test MSE: 0.001250, RMSE: 0.035353, MAE: 0.023484\n",
+      "R² Score: 0.095178, Explained Variance: 0.095232\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a model whose features include all interaction terms\n",
+    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
+    "                   (\"linear model\", LinearRegression())\n",
+    "]) \n",
+    "#setting degree = 2 creates all pairwise interaction terms. \n",
+    "\n",
+    "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
+    "pred = pipe.predict( df_ho[features] )\n",
+    "\n",
+    "mse = mean_squared_error(df_ho[\"y\"], pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = mean_absolute_error(df_ho[\"y\"], pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], pred)\n",
+    "exp_var = explained_variance_score(df_ho[\"y\"], pred)\n",
+    "\n",
+    "\n",
+    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
+    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a model with all interaction terms and lasso regression \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "2e6b6f89-6217-41e4-a47e-b0f06f1ec11b",
    "metadata": {},
    "outputs": [],
@@ -236,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "7dd1bfe5-da0d-4074-969c-8aacea12ba04",
    "metadata": {},
    "outputs": [],
@@ -261,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
