--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "174ee18d-50d9-4f5d-b30b-a78281db3cf3",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
    "metadata": {},
    "outputs": [
@@ -175,45 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create the basic linear regression model here with lasso regression. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.5350861374865856\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Create a model whose features include all interaction terms \n",
-    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
-    "                   (\"linear model\", LinearRegression())\n",
-    "]) \n",
-    "#setting degree = 2 creates all pairwise interaction terms. \n",
-    "\n",
-    "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
-    "pred = pipe.predict( df_ho[features] )\n",
-    "\n",
-    "print( root_mean_squared_error( df_ho[\"y\"], pred) ) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +191,8 @@
     }
    ],
    "source": [
-    "#Create a model with all interaction terms and lasso regression \n",
+    "#Create the basic linear regression model here with lasso regression. \n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LassoCV, Lasso\n",
     "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, explained_variance_score\n",
@@ -258,13 +222,60 @@
     "\n",
     "print(f\"\\nAlpha: {alpha}\")\n",
     "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
-    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")\n",
+    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test MSE: 2.356489, RMSE: 1.535086, MAE: 1.175820\n",
+      "R² Score: 0.124976, Explained Variance: 0.130502\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a model whose features include all interaction terms \n",
+    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
+    "                   (\"linear model\", LinearRegression())\n",
+    "]) \n",
+    "#setting degree = 2 creates all pairwise interaction terms. \n",
+    "\n",
+    "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
+    "pred = pipe.predict( df_ho[features] )\n",
+    "\n",
+    "mse = mean_squared_error(df_ho[\"y\"], pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = mean_absolute_error(df_ho[\"y\"], pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], pred)\n",
+    "exp_var = explained_variance_score(df_ho[\"y\"], pred)\n",
+    "\n",
+    "\n",
+    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
+    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a model with all interaction terms and lasso regression \n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "4a48034c-5135-4a52-a6f3-57bb5d03c11b",
    "metadata": {},
    "outputs": [],
@@ -274,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "36e385db-e0eb-4064-8ade-eb7c7ebd404e",
    "metadata": {},
    "outputs": [],
@@ -299,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
