changed alpha to 0.0001 for lasso with interaction terms

--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
    "metadata": {},
    "outputs": [
@@ -216,9 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso CV MSE: 0.03189889420892569\n",
-      "Optimal alpha: 0.00014873521072935117\n",
-      "MSE :  0.031540568158629025\n"
+      "MSE :  0.031542021171636604\n"
      ]
     }
    ],
@@ -231,15 +229,15 @@
     "df_ho[features] = scaler.transform( df_ho[features] )\n",
     "\n",
     "# using lasso cv to find the best alpha\n",
-    "lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
-    "lasso.fit(df_tt[features], df_tt[\"y\"])\n",
-    "pred = lasso.predict(df_ho[features])\n",
-    "print(\"Lasso CV MSE:\", root_mean_squared_error(df_ho[\"y\"], pred))\n",
-    "print(\"Optimal alpha:\", lasso.alpha_)\n",
+    "# lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
+    "# lasso.fit(df_tt[features], df_tt[\"y\"])\n",
+    "# pred = lasso.predict(df_ho[features])\n",
+    "# print(\"Lasso CV MSE:\", root_mean_squared_error(df_ho[\"y\"], pred))\n",
+    "# print(\"Optimal alpha:\", lasso.alpha_)\n",
     "\n",
     "pipe = Pipeline([\n",
     "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
-    "    (\"lasso\", Lasso(alpha=lasso.alpha_, max_iter=10000))\n",
+    "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
     "])\n",
     "pipe.fit(df_tt[features], df_tt[\"y\"])\n",
     "pred = pipe.predict(df_ho[features])\n",
@@ -249,14 +247,6 @@
     "lasso_coeffs = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
     "lasso_coeffs = lasso_coeffs[lasso_coeffs != 0]\n",
     "# print(lasso_coeffs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "acf4ba26",
-   "metadata": {},
-   "source": [
-    "### All coefficients are 0!"
    ]
   },
   {
