--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
    "outputs": [
@@ -254,9 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso CV MSE :  1.5361725177196763\n",
-      "Optimal Alpha :  0.0007278953843983154\n",
-      "MSE :  1.5094267529596463\n"
+      "MSE :  1.510058726098824\n"
      ]
     }
    ],
@@ -274,16 +272,16 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
-    "# using lasso cv to find the best alpha\n",
-    "lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
-    "lasso.fit( df_tt[features], df_tt[\"y\"])\n",
-    "pred = lasso.predict( df_ho[features] )\n",
-    "print(\"Lasso CV MSE : \",root_mean_squared_error( df_ho[\"y\"], pred) )\n",
-    "print(\"Optimal Alpha : \", lasso.alpha_ )\n",
+    "# # using lasso cv to find the best alpha\n",
+    "# lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
+    "# lasso.fit( df_tt[features], df_tt[\"y\"])\n",
+    "# pred = lasso.predict( df_ho[features] )\n",
+    "# print(\"Lasso CV MSE : \",root_mean_squared_error( df_ho[\"y\"], pred) )\n",
+    "# print(\"Optimal Alpha : \", lasso.alpha_ )\n",
     "\n",
     "\n",
     "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
-    "                   (\"lasso\", Lasso(alpha=lasso.alpha_, max_iter=10000))\n",
+    "                   (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
     "])\n",
     "pipe.fit( df_tt[features], df_tt[\"y\"])\n",
     "pred = pipe.predict( df_ho[features] )\n",
