fix: merge conflicts

--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -179,12 +179,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Test MSE: 0.001250, RMSE: 0.035353, MAE: 0.023484\n",
       "R² Score: 0.095178, Explained Variance: 0.095232\n"
-=======
       "0.03212568574696595\n"
->>>>>>> 8303918 (lasso with best alpha)
      ]
     }
    ],
@@ -219,17 +216,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso CV MSE: 0.03267286076829713\n",
-      "Optimal alpha: 0.0001\n",
-      "MSE :  0.032093798597853995\n"
+      "Lasso CV MSE: 0.03189889420892569\n",
+      "Optimal alpha: 0.00014873521072935117\n",
+      "MSE :  0.031540568158629025\n"
      ]
     }
    ],
    "source": [
     "#Create a model with all interaction terms and lasso regression \n",
-<<<<<<< HEAD
-    "\n"
-=======
     "from sklearn.linear_model import Lasso, LassoCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
@@ -263,7 +257,6 @@
    "metadata": {},
    "source": [
     "### All coefficients are 0!"
->>>>>>> 8303918 (lasso with best alpha)
    ]
   },
   {
@@ -289,11 +282,8 @@
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
    "display_name": "Python 3 (ipykernel)",
-=======
    "display_name": "erdos_spring_2025",
->>>>>>> 8303918 (lasso with best alpha)
    "language": "python",
    "name": "python3"
   },
