--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -10,11 +10,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 26,
-=======
    "execution_count": 1,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
    "metadata": {},
    "outputs": [
@@ -39,11 +35,7 @@
        "      dtype='object')"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 26,
-=======
      "execution_count": 1,
->>>>>>> 8303918 (lasso with best alpha)
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,11 +54,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 27,
-=======
    "execution_count": 2,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [],
@@ -84,11 +72,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 28,
-=======
    "execution_count": 3,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "174ee18d-50d9-4f5d-b30b-a78281db3cf3",
    "metadata": {},
    "outputs": [],
@@ -104,11 +88,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 29,
-=======
    "execution_count": 4,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
@@ -126,11 +106,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 30,
-=======
    "execution_count": 5,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
    "metadata": {},
    "outputs": [
@@ -171,11 +147,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 31,
-=======
    "execution_count": 6,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
    "metadata": {},
    "outputs": [],
@@ -185,11 +157,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 32,
-=======
    "execution_count": 7,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
    "metadata": {},
    "outputs": [
@@ -241,11 +209,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 33,
-=======
    "execution_count": 8,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
    "metadata": {},
    "outputs": [
@@ -253,12 +217,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Test MSE: 2.356489, RMSE: 1.535086, MAE: 1.175820\n",
       "R² Score: 0.124976, Explained Variance: 0.130502\n"
-=======
       "1.5633785548101489\n"
->>>>>>> 8303918 (lasso with best alpha)
      ]
     }
    ],
@@ -285,11 +246,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 34,
-=======
    "execution_count": 9,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
    "outputs": [
@@ -297,18 +254,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso CV MSE :  1.5711475982960674\n",
-      "Optimal Alpha :  0.0001\n",
-      "MSE :  1.5631963330645298\n"
+      "Lasso CV MSE :  1.5361725177196763\n",
+      "Optimal Alpha :  0.0007278953843983154\n",
+      "MSE :  1.5094267529596463\n"
      ]
     }
    ],
    "source": [
-<<<<<<< HEAD
     "#Create a model with all interaction terms and lasso regression \n",
     "\n",
-    "\n"
-=======
     "from sklearn.linear_model import LassoCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
@@ -339,16 +293,11 @@
     "lasso_coef = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
     "lasso_coef = lasso_coef[lasso_coef != 0]\n",
     "# print(lasso_coef)"
->>>>>>> 8303918 (lasso with best alpha)
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 35,
-=======
    "execution_count": 10,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "4a48034c-5135-4a52-a6f3-57bb5d03c11b",
    "metadata": {},
    "outputs": [],
@@ -358,11 +307,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 36,
-=======
    "execution_count": 11,
->>>>>>> 8303918 (lasso with best alpha)
    "id": "36e385db-e0eb-4064-8ade-eb7c7ebd404e",
    "metadata": {},
    "outputs": [],
@@ -373,11 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
-   "display_name": "Python 3 (ipykernel)",
-=======
    "display_name": "erdos_spring_2025",
->>>>>>> 8303918 (lasso with best alpha)
    "language": "python",
    "name": "python3"
   },
