--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -109,50 +109,27 @@
    "execution_count": 5,
    "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error: 1.644687\n",
-      "R-squared: -0.0044\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Create the baseline model here\n",
-    "\n",
-    "class BaseMeanModel():\n",
-    "    def __init__(self):\n",
-    "        self.mean_value = None\n",
-    "    \n",
-    "    def fit(self, values : pd.Series):\n",
-    "        self.mean_value = values.mean()\n",
-    "\n",
-    "    def predict(self, inputs=None):\n",
-    "        if inputs is None:\n",
-    "            return self.mean_value\n",
-    "        return len(inputs) * [self.mean_value]\n",
-    "    \n",
-    "model = BaseMeanModel()\n",
-    "model.fit(df_tt[\"y\"])\n",
-    "\n",
-    "# R2 is negative because training set and the hold out set have different average values\n",
-    "y_pred = model.predict(df_ho[features])\n",
-    "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
-    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
-    "print(f\"Root Mean Squared Error: {rmse:.6f}\")\n",
-    "print(f\"R-squared: {r2:.4f}\")"
+    "#Create the baseline model here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creat the basic linear regression model here "
+    "#Creat the basic linear regression model here \n",
+    "model = LinearRegression()\n",
+    "model.fit(df_tt[features], df_tt[\"y\"])\n",
+    "# Evaluate the model\n",
+    "y_pred = model.predict(df_ho[features])\n",
+    "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
+    "print(f\"Root Mean Squared Error (Log Views): {rmse:.6f}\")\n",
+    "print(f\"R-squared: {r2:.4f}\")"
    ]
   },
   {
@@ -160,51 +137,9 @@
    "execution_count": 7,
    "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Alpha: 0.0001\n",
-      "Test MSE: 2.367330, RMSE: 1.538613, MAE: 1.188627\n",
-      "R² Score: 0.120950, Explained Variance: 0.126585\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Create the basic linear regression model here with lasso regression. \n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LassoCV, Lasso\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, explained_variance_score\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(df_tt[features] )\n",
-    "X_test_scaled = scaler.transform( df_ho[features])\n",
-    "\n",
-    "\n",
-    "alpha = 0.0001\n",
-    "\n",
-    "lasso = Lasso(alpha=alpha, random_state=42, max_iter=10000)\n",
-    "\n",
-    "\n",
-    "lasso.fit(X_train_scaled, df_tt[\"y\"])\n",
-    "\n",
-    "y_pred = lasso.predict(X_test_scaled)\n",
-    "\n",
-    "# Calculate metrics\n",
-    "mse = mean_squared_error(df_ho[\"y\"], y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
-    "mae = mean_absolute_error(df_ho[\"y\"] ,y_pred)\n",
-    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
-    "exp_var = explained_variance_score(df_ho[\"y\"], y_pred)\n",
-    "\n",
-    "print(f\"\\nAlpha: {alpha}\")\n",
-    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
-    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")"
+    "#Create the basic linear regression model here with lasso regression. "
    ]
   },
   {
@@ -217,9 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test MSE: 2.356489, RMSE: 1.535086, MAE: 1.175820\n",
-      "R² Score: 0.124976, Explained Variance: 0.130502\n"
-      "1.5633785548101489\n"
+      "1.5101863989903899\n"
      ]
     }
    ],
@@ -233,15 +166,7 @@
     "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
     "pred = pipe.predict( df_ho[features] )\n",
     "\n",
-    "mse = mean_squared_error(df_ho[\"y\"], pred)\n",
-    "rmse = np.sqrt(mse)\n",
-    "mae = mean_absolute_error(df_ho[\"y\"], pred)\n",
-    "r2 = r2_score(df_ho[\"y\"], pred)\n",
-    "exp_var = explained_variance_score(df_ho[\"y\"], pred)\n",
-    "\n",
-    "\n",
-    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
-    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")"
+    "print( root_mean_squared_error( df_ho[\"y\"], pred) ) "
    ]
   },
   {
@@ -259,8 +184,6 @@
     }
    ],
    "source": [
-    "#Create a model with all interaction terms and lasso regression \n",
-    "\n",
     "from sklearn.linear_model import LassoCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
@@ -330,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
