--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -67,36 +67,24 @@
    "execution_count": 4,
    "id": "13d86438-aae7-4433-8644-e26d56daae6f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error: 0.037166\n",
-      "R-squared: -0.0000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Create the baseline model here\n",
+    "#Create the baseline model here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creat the basic linear regression model here \n",
     "\n",
-    "class BaseMeanModel():\n",
-    "    def __init__(self):\n",
-    "        self.mean_value = None\n",
-    "    \n",
-    "    def fit(self, values : pd.Series):\n",
-    "        self.mean_value = values.mean()\n",
-    "\n",
-    "    def predict(self, inputs=None):\n",
-    "        if inputs is None:\n",
-    "            return self.mean_value\n",
-    "        return len(inputs) * [self.mean_value]\n",
-    "    \n",
-    "    \n",
-    "model = BaseMeanModel()\n",
-    "model.fit(df_tt[\"y\"])\n",
-    "\n",
-    "# R2 is negative because training set and the hold out set have different average values\n",
+    "###Fitting the basic linear regression model using the training set and print the summary of the model.\n",
+    "model = LinearRegression()\n",
+    "model.fit(df_tt[features], df_tt[\"y\"])\n",
+    "# Evaluate the model\n",
     "y_pred = model.predict(df_ho[features])\n",
     "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
     "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
@@ -106,67 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Creat the basic linear regression model here "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "3e891559-d14a-47a2-af18-a5363af7e60b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Alpha: 0.0001\n",
-      "Test MSE: 0.001362, RMSE: 0.036912, MAE: 0.024071\n",
-      "R² Score: 0.013599, Explained Variance: 0.013606\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Create the basic linear regression model here with lasso regression. \n",
-    "\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LassoCV, Lasso\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, explained_variance_score\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(df_tt[features] )\n",
-    "X_test_scaled = scaler.transform( df_ho[features])\n",
-    "\n",
-    "alpha = 0.0001\n",
-    "lasso = Lasso(alpha=alpha, random_state=42, max_iter=10000)\n",
-    "\n",
-    "#cv_scores = cross_val_score(lasso, X_train_scaled, df_tt[\"y\"], cv=5,scoring='neg_mean_squared_error')\n",
-    "#cv_rmse = np.sqrt(-cv_scores.mean())\n",
-    "\n",
-    "lasso.fit(X_train_scaled, df_tt[\"y\"])\n",
-    "\n",
-    "y_pred = lasso.predict(X_test_scaled)\n",
-    "\n",
-    "# Calculate metrics\n",
-    "mse = mean_squared_error(df_ho[\"y\"], y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
-    "mae = mean_absolute_error(df_ho[\"y\"], y_pred)\n",
-    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
-    "exp_var = explained_variance_score(df_ho[\"y\"], y_pred)\n",
-    "\n",
-    "\n",
-    "print(f\"\\nAlpha: {alpha}\")\n",
-    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
-    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")\n",
-    "#print(f\"Cross-validated RMSE: {cv_rmse:.6f}\")\n"
+    "#Create the basic linear regression model here with lasso regression. "
    ]
   },
   {
@@ -179,9 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test MSE: 0.001250, RMSE: 0.035353, MAE: 0.023484\n",
-      "R² Score: 0.095178, Explained Variance: 0.095232\n"
-      "0.03212568574696595\n"
+      "0.03158406604410635\n"
      ]
     }
    ],
@@ -195,15 +126,7 @@
     "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
     "pred = pipe.predict( df_ho[features] )\n",
     "\n",
-    "mse = mean_squared_error(df_ho[\"y\"], pred)\n",
-    "rmse = np.sqrt(mse)\n",
-    "mae = mean_absolute_error(df_ho[\"y\"], pred)\n",
-    "r2 = r2_score(df_ho[\"y\"], pred)\n",
-    "exp_var = explained_variance_score(df_ho[\"y\"], pred)\n",
-    "\n",
-    "\n",
-    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
-    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")"
+    "print( root_mean_squared_error( df_ho[\"y\"], pred) ) "
    ]
   },
   {
@@ -272,7 +195,6 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
    "display_name": "erdos_spring_2025",
    "language": "python",
    "name": "python3"
@@ -287,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
