lasso with interaction on views

--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -263,14 +263,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a model with all interaction terms and lasso regression \n",
     "\n",
-    "\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "df_tt[features] = scaler.fit_transform(df_tt[features])\n",
+    "df_ho[features] = scaler.transform(df_ho[features])\n",
+    "\n",
+    "from sklearn.linear_model import LassoCV, Lasso\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "# # using lasso cv to find the best alpha\n",
+    "# lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
+    "# lasso.fit( df_tt[features], df_tt[\"y\"])\n",
+    "# pred = lasso.predict( df_ho[features] )\n",
+    "# print(\"Lasso CV MSE : \",root_mean_squared_error( df_ho[\"y\"], pred) )\n",
+    "# print(\"Optimal Alpha : \", lasso.alpha_ )\n",
+    "\n",
+    "\n",
+    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
+    "                   (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
+    "])\n",
+    "pipe.fit( df_tt[features], df_tt[\"y\"])\n",
+    "pred = pipe.predict( df_ho[features] )\n",
+    "print(\"MSE : \",root_mean_squared_error( df_ho[\"y\"], pred) )\n",
+    "\n",
+    "# Get lasso coefficients\n",
+    "lasso_coef = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
+    "lasso_coef = lasso_coef[lasso_coef != 0]\n",
+    "# print(lasso_coef)\n"
    ]
   },
   {
