lasso for engagement

--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -225,13 +225,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a model with all interaction terms and lasso regression \n",
-    "\n"
+    "\n",
+    "#Create a model with all interaction terms and lasso regression \n",
+    "from sklearn.linear_model import Lasso, LassoCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "df_tt[features] = scaler.fit_transform( df_tt[features] )\n",
+    "df_ho[features] = scaler.transform( df_ho[features] )\n",
+    "\n",
+    "# using lasso cv to find the best alpha\n",
+    "# lasso = LassoCV(cv=5, random_state=42, max_iter=10000, alphas=np.logspace(-4, 1, 30))\n",
+    "# lasso.fit(df_tt[features], df_tt[\"y\"])\n",
+    "# pred = lasso.predict(df_ho[features])\n",
+    "# print(\"Lasso CV MSE:\", root_mean_squared_error(df_ho[\"y\"], pred))\n",
+    "# print(\"Optimal alpha:\", lasso.alpha_)\n",
+    "\n",
+    "pipe = Pipeline([\n",
+    "    (\"interaction terms\", PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
+    "    (\"lasso\", Lasso(alpha=0.0001, max_iter=10000))\n",
+    "])\n",
+    "pipe.fit(df_tt[features], df_tt[\"y\"])\n",
+    "pred = pipe.predict(df_ho[features])\n",
+    "print(\"MSE : \", root_mean_squared_error(df_ho[\"y\"], pred))\n",
+    "\n",
+    "# Get lasso coefficients\n",
+    "lasso_coeffs = pd.Series(pipe.named_steps['lasso'].coef_, index=pipe.named_steps['interaction terms'].get_feature_names_out(features))\n",
+    "lasso_coeffs = lasso_coeffs[lasso_coeffs != 0]\n",
+    "# print(lasso_coeffs)"
    ]
   },
   {
